2015-03-11 Riccardo Mottola <rm@gnu.org>

	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	Bug Fix: Set the font manager with the picked font, not always the same.

2015-03-11 Riccardo Mottola <rm@gnu.org>

	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.h
	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	* Modules/Preferences/EditorFSC/Resources/EditorFSCPrefs.gorm
	Provide Editor and Fixed font preferences, instead of plain and rich.

	* Modules/Editors/ProjectCenter/PCEditorView.m
	Use the preferences Editor font instead of the system one.

2014-12-16 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProject.m
	Initialize backup wrapper after wrapperPath since it depends on it!

2014-12-16 Riccardo Mottola <rm@gnu.org>

	* Framework/PCMakefileFactory.m
	Generate sections only if there are classes.

2014-12-15 Riccardo Mottola <rm@gnu.org>

	* Framework/PCMakefileFactory.m
	Create mm sections in makefiles for Objective-C++

2014-12-08 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProject.m
	Accept also Objective-C++ classes as Class files

2014-11-20 Riccardo Mottola <rm@gnu.org>

	* Modules/Parsers/ProjectCenter/PCParser.m
	Force last action on parser if file lacks a new line at EOF.

2014-11-20 Riccardo Mottola <rm@gnu.org>

	* Modules/Parsers/ProjectCenter/ObjCCommentHandler.m
	Fix parser to ignore comments inside strings.

2014-10-07 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectManager.m
	* PCAppController.m
	Revert windows-specific hacks by German to make project-type choice work. They would crash when using PC without the WinUX theme.

2014-09-08 German Arias <germanandre@gmx.es>

	* Modules/Editors/ProjectCenter/Resources/LineJumper.gorm: Remove
	modifier key for button.

2014-09-02 Riccardo Mottola <rm@gnu.org>

	* Framework/PCAddFilesPanel.m
	* Framework/PCProjectBuilder.m
	Do not use GS internals but standard methods.

2014-08-29 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/GNUmakefile